[package]
name = "envy-fuzz"
version = "0.0.0"
publish = false
edition = "2018"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
serde = { version = "1.0.11", features = ["derive"] }

[dependencies.envy]
path = ".."

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[[bin]]
name = "from_iter"
path = "fuzz_targets/from_iter.rs"
test = false
doc = false

[profile.release]
debug = true
